--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ local.properties
 .settings/
 .loadpath
 .recommenders
+target/
 
 # Eclipse Core
 .project
@@ -51,3 +52,4 @@ local.properties
 
 #Maven
 .mvn
+.mvn/*
