--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,9 @@ spring.mvc.view.suffix=.jsp
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/sae?useSSL=false
 spring.datasource.username = sae
-spring.datasource.password = sae
-#spring.datasource.jndi-name=jdbc/econtrato
+#spring.datasource.password = sae
+spring.datasource.password = Sa3_d3s4
+#spring.datasource.jndi-name=jdbc/sar
 
 spring.jpa.database=MYSQL
 #spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
