--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,23 @@
 			<artifactId>scala-library</artifactId>
 			<version>2.11.0</version>
 		</dependency>
+		
+		<!-- JasperReports -->
+		<dependency>
+    		<groupId>net.sf.jasperreports</groupId>
+    		<artifactId>jasperreports</artifactId>
+    		<version>5.6.1</version>
+		</dependency>
+		
+		<dependency>
+    		<groupId>com.itextpdf</groupId>
+    		<artifactId>itextpdf</artifactId>
+    		<version>5.5.3</version>
+		</dependency>
+
+		
+		
+		
 	</dependencies>
 
 	<!-- <dependencyManagement> <dependencies> <dependency> <groupId>com.vaadin</groupId> 
