--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,12 @@
     		<version>5.5.3</version>
 		</dependency>
 
+		<!-- POI -->
+		<dependency>
+  			<groupId>org.apache.poi</groupId>
+  			<artifactId>poi-ooxml</artifactId>
+  			<version>3.15</version>
+		</dependency>
 		
 		
 		
