Bug resolve to add alumno payment without pay

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.mvc.view.suffix=.jsp
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/sae?useSSL=false
 spring.datasource.username = sae
-spring.datasource.password = sae
+spring.datasource.password = sae1
 #spring.datasource.password = Sa3_d3s4
 #spring.datasource.jndi-name=jdbc/sar
 
