--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,11 @@ spring.mvc.view.suffix=.jsp
 
 #Database
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url = jdbc:mysql://localhost:3306/sae?useSSL=false
-#spring.datasource.username = sae
-#spring.datasource.password = sae
+spring.datasource.url = jdbc:mysql://localhost:3306/sae_20170821?useSSL=false
+spring.datasource.username = sae
+spring.datasource.password = sae
 #spring.datasource.password = Sa3_d3s4
-spring.datasource.jndi-name=jdbc/sar
+#spring.datasource.jndi-name=jdbc/sar
 
 spring.jpa.database=MYSQL
 #spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
